--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "method-override": "^2.3.7",
-    "mongoose": "^4.9.0"
+    "mongoose": "^4.9.0",
+    "path": "^0.12.7"
   }
 }
